Модифицировано для сборки приложения. Advansed Installer. Запускается, но есть небольшие проблемы с кнопками. getResourseAsStream решает многое.